--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
     <h1>Hello Wordle</h1>
 
     <form>
-      <label for="guess-input">Guess</label>
-      <input class="guess-input" id="guess-input" type="text" />
-      <label for="guess-index-0">0</label>
-      <input class="color-input" id="guess-index-0" type="text" />
-      <label for="guess-index-1">1</label>
-      <input class="color-input" id="guess-index-1" type="text" />
-      <label for="guess-index-2">2</label>
-      <input class="color-input" id="guess-index-2" type="text" />
-      <label for="guess-index-3">3</label>
-      <input class="color-input" id="guess-index-3" type="text" />
-      <label for="guess-index-4">4</label>
-      <input class="color-input" id="guess-index-4" type="text" />
-      <button type="button" onclick="bestNextGuesses()">Submit</button>
+        <label for="guess-input">Guess</label>
+        <input class="guess-input" id="guess-input" type="text" />
+        <div class="form-container">
+        <label for="guess-index-0">0</label>
+        <input class="color-input" id="guess-index-0" type="text" />
+        <label for="guess-index-1">1</label>
+        <input class="color-input" id="guess-index-1" type="text" />
+        <label for="guess-index-2">2</label>
+        <input class="color-input" id="guess-index-2" type="text" />
+        <label for="guess-index-3">3</label>
+        <input class="color-input" id="guess-index-3" type="text" />
+        <label for="guess-index-4">4</label>
+        <input class="color-input" id="guess-index-4" type="text" />
+        <button type="button" onclick="bestNextGuesses()">Submit</button>
+      </div>
     </form>
 
     <div><h3 id="suggested-word-1"></h3></div>
