updated focus on inputs

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <input class="guess-input" id="guess-input" type="text" />
         <div class="form-container">
         <label for="guess-index-0">0</label>
-        <input class="color-input" id="guess-index-0" type="text" />
+        <input class="color-input" id="guess-index-0" type="number" />
         <label for="guess-index-1">1</label>
-        <input class="color-input" id="guess-index-1" type="text" />
+        <input class="color-input" id="guess-index-1" type="number" />
         <label for="guess-index-2">2</label>
-        <input class="color-input" id="guess-index-2" type="text" />
+        <input class="color-input" id="guess-index-2" type="number" />
         <label for="guess-index-3">3</label>
-        <input class="color-input" id="guess-index-3" type="text" />
+        <input class="color-input" id="guess-index-3" type="number" />
         <label for="guess-index-4">4</label>
-        <input class="color-input" id="guess-index-4" type="text" />
-        <button type="button" onclick="bestNextGuesses()">Submit</button>
+        <input class="color-input" id="guess-index-4" type="number" />
+        <button id="submit-guess" type="button" onclick="bestNextGuesses()">Submit</button>
       </div>
     </form>
 
