--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </form>
 
     <div><h3 id="suggested-word-1"></h3></div>
+    <div><h3 id="suggested-word-2"></h3></div>
     <div><h3>Answer Possibilities:</h3></div>
     <div><h4 id="total-possibilities"></h4></div>
     <div id="guess-1"></div>
